1688Admin : homepage charts

--- a/src/apps/1688Admin/components/system-list/index.pug
+++ b/src/apps/1688Admin/components/system-list/index.pug
@@ -10,7 +10,7 @@
                 i.fa.fa-flag-o
             .sl-btn-title 创业孵化
     .col-xs-4
-        .sl-btn.touch-active.disabled(title="暂无权限")
+        a.sl-btn.touch-active(href='#')
             .sl-btn-icon
                 i.fa.fa-line-chart
             .sl-btn-title 运营管理
@@ -30,7 +30,7 @@
                 i.fa.fa-star-o
             .sl-btn-title 党政管理
     .col-xs-4
-        .sl-btn.touch-active.disabled(title="暂无权限")
+        a.sl-btn.touch-active(href='#')
             .sl-btn-icon
                 i.fa.fa-cogs
             .sl-btn-title 系统管理
