--- a/src/apps/1688Admin/webapp/stylus/variables.styl
+++ b/src/apps/1688Admin/webapp/stylus/variables.styl
@@ -19,6 +19,8 @@ COMMON_LINE_HEIGHT = (20 / 14)
 THEME_COLOR = BLUE_OCEAN
 
 //layout
+INDEX_SPACE = 0.2rem
+INDEX_SPACE_MOBILE =0.08rem
 TOP_HEIGHT = 0.6rem
 TOP_HEIGHT_MOBILE = 0.48rem
 LEFT_WIDTH = 2rem
