--- a/src/apps/1688Admin/components/topbar/index-main.pug
+++ b/src/apps/1688Admin/components/topbar/index-main.pug
@@ -1,10 +1,11 @@
-.topbar
+.topbar.main-topbar
     .logo
         img(src=IMG_DIR + 'logo-white.png')
-        |双创智慧园区后台管理系统
-    .menubtn.touch-active#menu_btn
-        i.fa.fa-navicon
+        span 双创智慧园区后台管理系统
     .right-shoulder
+        a.btn.btn-large.btn-topbar.pull-left(href="javascript:;")
+            i.fa.fa-home
+            |&nbsp;门户首页
         .dropdown.pull-left
             .btn.btn-large.btn-topbar#topbar_menu_btn(data-toggle="dropdown" aria-haspopup="true" aria-expanded="true")
                 i.fa.fa-user-circle-o
