--- a/src/apps/1688Admin/webapp/index-system.pug
+++ b/src/apps/1688Admin/webapp/index-system.pug
@@ -12,13 +12,12 @@ block content
         .left-container#left_container
             include ../components/tree-menu/index
         .right-container
-            iframe.main-iframe(frameborder = 0 src = "dashboard.html")
+            iframe.main-iframe(frameborder = 0 src = "home-system.html")
         .mobile-menu-mask#menu_mask
 
 block js
     script(src=JS_DIR + 'jquery.min.js')
     script(src=JS_DIR + 'bootstrap.min.js')
-    script(src=JS_DIR + 'jquery.treeMenu.js')
     script(src=JS_DIR + 'iscroll.js')
     script(src=JS_DIR + 'perfect-scrollbar.jquery.min.js')
     script(src=JS_DIR + 'app.js')
@@ -51,7 +50,7 @@ block js
                     title : "系统首页",
                     icon_class : "fa fa-home",
                     selected : true,
-                    btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                    btn_props : "data-toggle='iframelinker' data-link='home-system.html'",
                     btn_addon : "<div class='sel-arrow'></div>"
                 },
                 {
@@ -64,126 +63,126 @@ block js
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "二级菜单",
                             icon_class : "fa fa-file-o",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
@@ -196,14 +195,14 @@ block js
                                     title : "三级菜单",
                                     icon_class : "fa fa-calendar",
                                     selected : false,
-                                    btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                                    btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                                     btn_addon : "<div class='sel-arrow'></div>"
                                 },
                                 {
                                     title : "三级菜单",
                                     icon_class : "fa fa-bar-chart",
                                     selected : false,
-                                    btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                                    btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                                     btn_addon : "<div class='sel-arrow'></div>"
                                 }
                             ]
@@ -220,21 +219,21 @@ block js
                             title : "系统设置",
                             icon_class : "fa fa-cog",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='setup.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='setup.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "数据字典",
                             icon_class : "fa fa-book",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
                             title : "权限管理",
                             icon_class : "fa fa-lock",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_props : "data-toggle='iframelinker' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         }
                     ]
@@ -250,10 +249,11 @@ block js
                 jsonData : menuData,
                 
                 foldUnselected : true, //点击切换菜单时，折叠未被选中的菜单，默认false
+                onlyFolderAction : true,
                 
                 afterInit :afterTMInit,
-                onMenuBtnClick : onMBClick,
-                onMenuBtnClickLink : onMBClickLink
+                onFolderBtnClick : onFolderBtnClick,
+                onLinkBtnClick : onLinkBtnClick
             });
             
             //移动模式下隐藏/显示菜单
@@ -266,19 +266,25 @@ block js
                 if(isMobile) hideMenu();
             });
             
+            //iframe的src地址改变时，触发菜单改变选中的按钮
+            $('body').bind('iframeLinkChanged', function(evt,iframelink){
+                $(this).trigger('tmenu.changeSel',[$('#tree_menu').find('[data-link="' + iframelink +'"]')]);
+            });
+            
             //菜单初始化后触发事件
             function afterTMInit() {
                 refreshScroll();
-                app.setIframeLinks();
+                app.setIframeLinker('.main-iframe', 'iframelinker');
             }
             
             //菜单按钮按下触发事件
-            function onMBClick() {
+            function onFolderBtnClick() {
                 refreshScroll();
             }
             
             //手机端，当点击非层级容器按钮时，延迟半秒收回菜单
-            function onMBClickLink() {
+            function onLinkBtnClick() {
+                refreshScroll();
                 if(isMobile) {
                     setTimeout(function () {
                         hideMenu();
