--- a/src/apps/1688Admin/webapp/stylus/index.styl
+++ b/src/apps/1688Admin/webapp/stylus/index.styl
@@ -222,6 +222,8 @@ for i in (1..10)
 @require '../../components/login/index'
 @require '../../components/news-list/index'
 @require '../../components/system-list/index'
+@require '../../components/todo/index'
+@require '../../components/footer/index'
 
 
 
